feat,refactor: added new Base64Image column to product, created private methods in ProductServiceImpl